# SparkPing

./: .dockerignore  .gitignore  .mise.toml  .release-it.json  CHANGELOG.md  Cargo.toml  Dockerfile  cliff-ha.toml  cliff.toml  config.toml  repository.yaml
.github/workflows/: addon-builder.yml  ci.yml  docker-build.yml  linting.yml  release.yml
docs/: STRUCTURE.md
docs/decisions/: 0001-vendor-specific-discovery.md  0002-device-identification-backend-migration.md  template.md
frontend/: eslint.config.js  index.html  knip.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx  routeTree.gen.ts  types.ts
frontend/src/components/: ChartGrid.tsx  DeviceDiscoveryPanel.tsx  DurationPicker.tsx  EmptyState.tsx  ErrorDisplay.tsx  FiltersPanel.tsx  JsonView.tsx  LoadingState.tsx  PageLayout.tsx  PingChart.tsx  SearchInput.tsx  Sparkline.tsx  Statistics.tsx  TargetStatsBar.tsx  TimeControls.tsx  TimeRangePicker.tsx  UnifiedDiscoveryPanel.tsx  durationOptions.ts
frontend/src/context/: ThemeContext.tsx  theme.ts
frontend/src/contexts/: CrossChartHoverContext.tsx  (+1 more)
home-assistant-addon/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.toml  config.yaml  run.sh
src/: api.rs  config.rs  config_file.rs  config_wizard.rs  discovery.rs  icmp.rs  ip_scan.rs  logging.rs  main.rs  memory.rs  ping.rs  storage.rs  tasks.rs  unified_discovery.rs
src/api/: middleware.rs  mod.rs  router.rs  state.rs
src/device_identification/: mod.rs  parsers.rs
src/vendor_discovery/: mod.rs  sonos.rs
(+62 files in other folders)
