[package]
name = "SparkPing"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tsink = "0.4.1"
ping = "0.4"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi", "chrono"] }
axum = "0.7"
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
toml_edit = "0.22"
notify = "7.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
